--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,73 @@
     <string name="tab_text_3">Tab 3</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
+    <string name="home_images">Home Images</string>
+    <string name="password">Password</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="incity_trips">InCity Trips</string>
+
+
+    <string name="out_city">Out City</string>
+
+
+    <string name="choose_image">Choose image</string>
+    <string name="collection">Collection</string>
+
+    <string name="enter_name">Enter Name</string>
+
+    <string name="diary">Diary</string>
+    <string name="upload_video">Upload Video</string>
+    <string name="within_city_trips">Within city trips</string>
+    <string name="out_of_city_trips">Out of city trips</string>
+    <string name="out_of_state_trips">Out of state trips</string>
+    <string name="wishlist">Wishlist</string>
+    <string name="choose_video">Choose Video</string>
+    <string name="upload">Upload</string>
+    <string name="show_uploads">Show uploads</string>
+    <string name="in_city">In City</string>
+    <string name="outcity">OutCity</string>
+    <string name="foreign">Foreign</string>
+
+
+    <string name="wishlist_videos">Wishlist Videos</string>
+
+
+    <string name="textview">TextView</string>
+
+    <string name="signout">SignOut</string>
+    <string name="edit">Edit</string>
+
+    <string name="email">Email</string>
+    <string name="phone">Phone</string>
+
+
+    <string name="images">Images</string>
+    <string name="videos">Videos</string>
+    <string name="button">Button</string>
+
+
+    <string name="log_in">Log in</string>
+    <string name="name">Name</string>
+    <string name="profile">Profile</string>
+    <string name="city">City</string>
+    <string name="country">Country</string>
+    <string name="age">Age</string>
+    <string name="gender">Gender</string>
+    <string name="phone_no">Phone no</string>
+    <string name="update">Update</string>
+    <string name="home_videos">Home Videos</string>\
+    <string name="be_a_treveller_be_a_story_teller">Be a treveller. Be a Story teller</string>
+    <string name="or">Or</string>
+    <string name="log_in_with_email">Log in with Email</string>
+    <string name="signup_with_email">SignUp with email</string>
+    <string name="outcity_trips">Outcity Trips</string>
+    <string name="out_state_trips">Out State Trips</string>
+    <string name="out_state">Out State</string>
+    <string name="facebook_data">Facebook data</string>
+    <string name="id">ID</string>
+
+
+    <string name="access_token">pk.eyJ1IjoiYWxpcmF6YXdhbm4iLCJhIjoiY2pwMzA0OWs3MGJyZjNxcndzdzc0MzQyaiJ9.qRphKaFYxG4WSgg8wZwskg</string>
+    <string name="title_activity_map">map</string>
 
 </resources>
